kube.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: tb
    spec:
      containers:
      - image: duderman/test_blog:0.0.1
        name: tb
        ports:
        - containerPort: 3000
          protocol: TCP
          name: tb-server
        livenessProbe:
          httpGet:
            path: /
            port: tb-server
          initialDelaySeconds: 30
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: tb-server
          initialDelaySeconds: 30
          timeoutSeconds: 1
        resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 1Gi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: tb-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: tb

---
apiVersion: v1
kind: List
metadata: {}
items:
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    name: tb-deployment
    namespace: default
  spec:
    maxReplicas: 10
    minReplicas: 1
    scaleTargetRef:
      apiVersion: extensions/v1beta1
      kind: Deployment
      name: tb-deployment
